<resources>
    <string name="app_name" translatable="false">AI Emoji Maker</string>
    <string name="unable_to_access_the_internet_please_visit_connection_wifi_settings">Unable to access the internet please visit connection wifi settings</string>
    <string name="title_intro_1">Welcome to Emoji Stitch</string>
    <string name="title_intro_2">Embark on your sticker journey</string>
    <string name="title_intro_3">Joyful Stickers and Emoji</string>
    <string name="content_intro_1">Let your creativity shine with personalized emojis and stickers, lovingly crafted by yourself</string>
    <string name="content_intro_2">Craft custom emojis and stickers to convey your emotions uniquely</string>
    <string name="content_intro_3">Many rich categories with 100+ free stickers for you</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="install">Install</string>
    <string name="emoji_sticker">Emoji Sticker</string>
    <string name="home">Home</string>
    <string name="my_creative">My Creative</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="create_your_emblem">Create Your Emblem</string>
    <string name="unleash_your_individuality">Unleash Your Individuality</string>
    <string name="create">Create</string>
    <string name="title_activity_emoji_maker">EmojiMakerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="recent">Recent</string>
    <string name="create_Emoji">Create Emoji</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="option_preview">Option preview</string>
    <string name="face">Face</string>
    <string name="accessories">Accessories</string>
    <string name="beard">Beard</string>
    <string name="brow">Brow</string>
    <string name="eyes">Eyes</string>
    <string name="glass">Glass</string>
    <string name="hair">Hair</string>
    <string name="hand">Hand</string>
    <string name="hat">Hat</string>
    <string name="mouth">Mouth</string>
    <string name="nose">Nose</string>
    <string name="piece_of_sticker">piece of sticker</string>
    <string name="save">Save</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="introduce">Introduce</string>
    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="add_to_package">Add to Package</string>
    <string name="add_to_whatsapp">Add to Whatsapp</string>
    <string name="add_to_telegram">Add to Telegram</string>
    <string name="icon_button">Icon button</string>
    <string name="create_new_package">Create new package</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="categories">Categories</string>
    <string name="cat_emoji">Cat Emoji</string>
    <string name="sticker_preview">Sticker preview</string>
    <string name="_12">+12</string>
    <string name="no_app_found">No app found!</string>
    <string name="item">Item</string>
    <string name="items">items</string>
    <string name="avatar_package">Avatar package</string>
    <string name="please_input_package_name">Please input package name</string>
    <string name="please_chose_your_package">Please chose your package</string>
    <string name="package_existed">Package Existed!</string>
    <string name="confirm">Confirm</string>
    <string name="save_successfully">Save successfully!</string>
    <string name="your_emoji_has_been_saved_to">Your emoji has been saved to</string>
    <string name="back_to_home">Back to Home</string>
    <string name="create_more">Create More</string>
    <string name="english">English</string>
    <string name="this_function_is_not_supported_yet">This function is not supported yet!</string>
    <string name="coming_soon" translatable="false">Coming soon</string>
    <string name="empty">Empty</string>
    <string name="you_don_t_have_any_package">You don\'t have any package</string>

    <string name="please_feedback">Please feedback</string>
    <string name="thank_you">Thank you</string>
    <string name="title_dialog_rating_1">Oh, no</string>
    <string name="content_dialog_rating_1_2_3">Please give us some feedback!</string>
    <string name="title_dialog_rating_5">We love you too</string>
    <string name="content_dialog_rating_4_5">Thanks for your feedback</string>
    <string name="title_rate_default">Do you like the app?</string>
    <string name="content_rate_default">Let us know your experience</string>
    <string name="may_be_later">May be later</string>
    <string name="rate_us">Rate us</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="language_options">Language option</string>
    <string name="share_app">Share app</string>
    <string name="download_done">Download done!</string>
    <string name="download_failed">Download failed!</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Storage permission is encessary to wrote event</string>
    <string name="loading">Loading</string>

    <string name="creating_sticker">Creating sticker…</string>
    <string name="preparing_workplace">Preparing workplace…</string>
    <string name="loading_stickers">Loading stickers…</string>
    <string name="load_ad_failed">Load ad failed!</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_to_access_storage">Permission to access storage</string>
    <string name="are_you_sure_want_to_quit">Are you sure want to quit?</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no" translatable="false">No</string>
    <string name="you_may_also_like">You may also like:</string>
    <string name="see_more">See more</string>
    <string name="create_package">Create package</string>
    <string name="tap_here_to_create_new_package">Tap here to create new package</string>
    <string name="please_try_again">Please try again!</string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="icon_advertising">Icon advertising</string>
    <string name="content_daily_notification">How do you feel?</string>
    <string name="unlock_items">Unlock items</string>
    <string name="watch_ads_to_unlock_for_free">Watch ads to unlock for free</string>
    <string name="watch_video">Watch Video</string>
    <string name="you_need_to">You need to</string>
    <string name="exporting">Exporting</string>
    <string name="saved">Saved</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="error">Error</string>
    <string name="image">image</string>
    <string name="emoji_merge">Emoji merge</string>
    <string name="warning">Warning</string>
    <string name="lost_internet_connection">Lost internet connection</string>
    <string name="go_to_setting">Go to settings</string>
    <string name="merge_emoji">Merge Emoji</string>
    <string name="merge">Merge</string>
    <string name="done">Done</string>
    <string name="merging">Merging…</string>
    <string name="oops_something_went_wrong">Oops, something went wrong.\nPlease try again.</string>
    <string name="try_again">Try again</string>
    <string name="check_result">Check result</string>
    <string name="Rename">Rename</string>
    <string name="your_emoji_has_been_saved_to_my_creative">Your emoji has been saved to \n <b> \"My Creative\" </b></string>
    <string name="merge_successfully">Merge Successfully</string>
    <string name="delete_this_sticker">Delete this sticker!</string>
    <string name="internet_error">Internet Error</string>
    <string name="please_connect_with_your_internet">Please connect with your Internet</string>

</resources>