<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="@dimen/_2sdp"
        android:src="@drawable/ic_close"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="@id/llView"
        app:layout_constraintEnd_toEndOf="@id/llView"
        android:contentDescription="@string/icon_button" />
    <LinearLayout
        android:id="@+id/llView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:padding="@dimen/_16sdp"
        android:background="@drawable/bg_popup"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/poppins_semibold"/>

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/description"
            android:fontFamily="@font/poppins_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:backgroundTint="#F5F2F3"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btnOK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>