<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:gravity="center_horizontal"
        tools:context=".ui.dialog.SaveSuccessDialog">
        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="@dimen/_172sdp"
            android:layout_height="@dimen/_172sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@color/transparent"
            android:contentDescription="@string/preview"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/save_successfully"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_18ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/your_emoji_has_been_saved_to_my_creative"
            android:fontFamily="@font/poppins_regular"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:id="@+id/rl_native"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:visibility="gone"
            android:layout_gravity="bottom">
            <FrameLayout
                android:id="@+id/fr_native_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/ads_native_shimmer" />
            </FrameLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_12sdp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:gravity="center"
                android:background="@drawable/bg_button_home"
                android:text="@string/back_to_home"
                android:textColor="@color/black"
                android:foreground="?android:attr/selectableItemBackground"/>
            <TextView
                android:id="@+id/btnCreateMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:gravity="center"
                android:background="@drawable/bg_button_enabled"
                android:text="@string/create_more"
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </LinearLayout>
</layout>