<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_100sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_options"
    android:elevation="@dimen/_4sdp"
    android:translationZ="@dimen/_1sdp">

    <LinearLayout
        android:id="@+id/optionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btnRename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/Rename"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/ic_pen" />

        <TextView
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/ic_share_2" />

        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/delete"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/ic_trash_bin" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>