<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_category"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgNoInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_no_internet"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/internet_error"
                android:textColor="#000000"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgNoInternet"/>


            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/please_connect_with_your_internet"
                android:textColor="#475467"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />


            <TextView
                android:id="@+id/tvGoToSetting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_button_enabled"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/go_to_setting"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintLeft_toRightOf="@id/tvCancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContent" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="9dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/cancel"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_11ssp"
                android:background="@drawable/bg_button_disable"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvGoToSetting"
                app:layout_constraintTop_toBottomOf="@id/tvContent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>


</layout>